--- a/host/package.json
+++ b/host/package.json
@@ -20,5 +20,8 @@
     "@vitejs/plugin-react": "4.2.1",
     "typescript": "5.4.5",
     "vite": "7.2.1"
+  },
+  "zephyr:dependencies": {
+    "remote": "module-federation-vite-react-remote@workspace:*"
   }
 }
